--- a/index.html
+++ b/index.html
@@ -7,8 +7,8 @@
     <link rel="stylesheet" href="style.css" />
   </head>
   <body>
-    <header>Moi</header>
-    <main>moi</main>
-    <footer>moi</footer>
+    <header>Header</header>
+    <main>Main</main>
+    <footer>Footer</footer>
   </body>
 </html>
